--- a/j_arsac/ch_1_1.md
+++ b/j_arsac/ch_1_1.md
@@ -140,3 +140,84 @@ Using my microcomputer I figured out that `a` = 1.226 produces much better resul
 vary from the machine to the machine, since this is very sensitive to the way the multiplication
 is performed by the computer: the last bit of the multiplication is somewhat indeterminate, which
 substantially affects this process.
+
+### Games of Chance
+
+Now you should be in a position to obtain series of random numbers. You may have this facility
+available as part of your language, or you may have built your own function to construct such
+series using the method from the previous section.
+
+**Exercise 3. Head or tails**
+
+This is not really a game; this is more of an exercise to learn how to use random numbers. Write
+a program that:
+   - asks you whether you are thinking of heads or tails, and reads your input
+   - produces a random number and checks if you won or lost
+
+A small complication: the random number generator produces a number between 0 and 1 (like the
+`ALE` function in LSE, or the random number generator from the previous section). Therefore, we
+need to transition from a number in the range (0, 1) to something that has exactly two values,
+say 0 or 1. You make sure one of them corresponds to head, and the other - tails.
+
+If the random number generator is not perfect, the game will turn out unfair, and one of the
+possibilities, head or tail, may occur more often than the other.
+
+Write a program that exercises a lot of tests and count how many times it produces heads.
+
+**Exercise 4. Dice**
+
+Now, instead of heads or tails, make the computer play dice. Write a program that performs a lot
+of throws of two dice, and count how many times each combination between 2 and 12 rolls. Do you
+know how many times you should get each, if the random number generator is perfect, and the
+number of rolls is very large?
+
+Basically, you have the same task as before: transition from a number in the range (0,1) to a
+whole number 1 to 6 inclusive. But if you know how to do this for 2, you can do it for 6...
+
+**Game 1. Loaded dice**
+Well, you can still find people who cheat and use loaded dice. You've got to be able to spot
+this and like in a good old western, have a massive fight with the cheat.
+
+Let in this game the cheat is the computer. It plays with one die, and rolls it as many times
+as you want. It produces the counts of rolls of 1, 2, ..., 6. You tell the computer whether
+you believe the die is loaded, and if it is, which side is loaded - which number rolls more
+often than the others. The computer tells you whether you won or lost, and evaluates you win
+in a certain manner. Obviously, if you ask for 10,000 rolls to decide, you will have a higher
+chance of detecting the truth than if you ask for only 20 rolls.
+
+You need to solve two problems: the computer needs to decide whether to cheat or not, and if
+it chooses to cheat, it needs to pick which side should be loaded - which number will be rolled
+more often than the others.
+
+An additional problem: how to evaluate the score of the win.
+
+**(+) Game 2. A strategy for one die game**
+J.-C. Baillif [BAI] designed a game with dice with two players. Each player in turn rolls the die
+as many times as they like. If they roll numbers other than 1, they add the number to the score
+for this turn, and can decide to roll more, or stop. If they roll a 1, the score for the turn
+is erased, and the other player gets a turn. The winner is the one who reaches the score of 100
+first.
+
+Write a program that lets the human play against the computer. This program rolls the die. When
+the computer has its turn, it does not cheat. When the human has their turn, the computer rolls
+the die, and tells what number rolled, and the human can demand another roll, or pass the turn.
+
+The task of the strategy is clear. You can roll just once. This will let you improve your score,
+but only by a small amount (2 to 6). If you choose to roll more, you increase the chances of
+getting a higher score, but also you increase the risk of rolling a 1, and get nothing. The
+strategy of the player is his problem and the computer program does not take part in any of these
+deliberations. The program only does the human's bidding: roll more, if the human says so, under
+their own responsibility.
+
+But when the computer has its turn, the program must have some strategy to control the computer's
+behaviour. There are many possibilities. It's for you to decide.
+
+Programming this game has two aspects to investigate:
+   - devise a strategy for the computer;
+   - you can experiment. If the computer has a certain strategy, try to use a different strategy,
+     and see who wins.
+
+You may also want to replay the game with the same start as the previous game, and modify the
+program's behaviour to discover the consequences. This brings us to the new concept:
+
+### Reproducible Unpredictable Number Series
