--- a/j_arsac/ch_1_1.md
+++ b/j_arsac/ch_1_1.md
@@ -1,7 +1,7 @@
 # Part 1 - Puzzles
 
-## Random Numbers
-### Generating Random Numbers
+## 1. Random Numbers
+### 1.1. Generating Random Numbers
 
 You can see this as a real puzzle: write a program that produces a number randomly
 chosen from a given interval - say, between 0 and 1. But this is impossible.
@@ -52,7 +52,7 @@ the order of magnitude of the result. On the other hand this way you cannot get 
 applications we will consider in this book. And if you want to get something really
 unpredictable, read the next section.
 
-### Unpredictable Number Series
+### 1.2. Unpredictable Number Series
 
 You rarely will need a single random number. Oftentimes you need to get a lot of such numbers.
 Most of the games presented in this book require that the player encountered unpredictable
@@ -141,7 +141,7 @@ vary from the machine to the machine, since this is very sensitive to the way th
 is performed by the computer: the last bit of the multiplication is somewhat indeterminate, which
 substantially affects this process.
 
-### Games of Chance
+### 1.3. Games of Chance
 
 Now you should be in a position to obtain series of random numbers. You may have this facility
 available as part of your language, or you may have built your own function to construct such
@@ -220,4 +220,70 @@ Programming this game has two aspects to investigate:
 You may also want to replay the game with the same start as the previous game, and modify the
 program's behaviour to discover the consequences. This brings us to the new concept:
 
-### Reproducible Unpredictable Number Series
+### 1.4. Reproducible Unpredictable Number Series
+
+So now you know how to generate unpredictable number series, or what, admittedly somewhat
+imprecisely, is called random numbers (these series are certainly not random: they are fully
+deterministic, but since we cannot find a simple method of knowing the next number from the
+previous number, and because they are approximately evenly spread between 0 and 1, they appear
+as random). Each number in this series depends only on the previous number. Besides, you can
+obtain fully unpredictable numbers, as explained earlier, say, by providing computer with three
+cards. You work out the starting number from these cards as demonstrated in section 1.1, and
+then you produce the next number using the function `ALE` (or whatever the function happens
+to be in your language), or using a method described in section 1.2.
+
+These series of random numbers are such that every following number depends only on the
+preceding number, so picking the initial number of the series fully determines the whole
+series. Starting from the same number two computations produce the same sequences of numbers.
+So you can get not only unpredictable situations in games, but also you can reproduce them
+as many times as needed. This requires the program to ask to input the initial number of the
+series. For convenience I suggest asking something like this:
+```
+Enter a three-digit whole number:
+```
+and reading this `x` use `x/1000` as the initial number of the series.
+
+Using a random number generator we can easily get a whole series of whole numbers. The name of
+the function that produces random numbers can differ from language to language; let's call it
+`ale(x)`. For every `x`,
+```
+0 <= x < 1
+```
+this function finds a corresponding number,
+```
+0 <= ale(x) < 1
+```
+Now let's construct a sequence of non-negative whole numbers smaller than `n`. We have a
+couple ways to do this.
+
+1. We generate a sequence of random numbers in the range (0,1) and for every number in the
+   sequence we obtain a whole number:
+   ```
+   x = ale(x)
+   p = whole_part(n * x)
+   ```
+
+Different `x` may produce the same value of `p`, so the number following `p` is not
+predictable. Generally speaking, a given `p` may be repeated several times. It is not very
+likely to be periodic. The repetition is going to happen, if the sequence of `x` that
+determine it, is periodic (this does happen, whether we want it or not).
+
+2. Say we have `p`; then `p / n` is between 0 and 1. And the number following `p` can be
+   computed like so:
+   ```
+   p = whole_part(n * ale(p / n))
+   ```
+
+Here the number following `p` is fully determined by `p`, and this sequence is unavoidably
+periodic. In some lucky cases it produces `n` different values (`n` whole numbers between
+0 and `n` - 1), after which it inevitably comes back to a number that has been produced
+before, and, since every subsequent number is fully determined by the preceding number, we
+get a sequence that is the same as we already have seen.
+
+**(++) Puzzle 1. Periodic sequence**
+Let's obtain a sequence of whole numbers in the range (0, `n` - 1) using one of the methods
+above. Suppose, `n` is very large (say, 10,000). Write a program that can determine the
+length of the period in this sequence. Try to do this with the limitation: you cannot store
+the entire sequence of numbers in a table or in any other form. This is why we suppose `n`
+is very large: there can be no way to store all of them to see whether the new value has
+been seen before. You need a different method.
