--- a/j_arsac/ch_1_1.md
+++ b/j_arsac/ch_1_1.md
@@ -141,6 +141,8 @@ vary from the machine to the machine, since this is very sensitive to the way th
 is performed by the computer: the last bit of the multiplication is somewhat indeterminate, which
 substantially affects this process.
 
+(And using my microcomputer I see `a` = 1.52067 is the best.)
+
 ### 1.3. Games of Chance
 
 Now you should be in a position to obtain series of random numbers. You may have this facility
